<resources>
    <string name="app_name">Friends</string>
    <string name="Friedns_name">Friends</string>
    <string name="enter_name_register">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_register_label">Confirm Password</string>
    <string name="password_reg_label">Password</string>
    <string name="name">Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="display_name">Display name</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="picture_reg">Picture</string>
    <string name="add_picture_button">Add picture</string>
    <string name="register_button">Register</string>
    <string name="already_register">Already registered?</string>
    <string name="not_register">Not registered?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="settings">settings</string>
    <string name="cur_user">cur user</string>
    <string name="enter_address">Enter address-"ip:port"</string>
    <string name="edit_server_address">Edit server address:</string>
    <string name="choose_theme">choose theme:</string>
    <string name="add">Add Contact:</string>
    <string name="enter_mes">enter message</string>
    <string name="BaseUrl">http://172.18.41.97:5000/api/</string>
    <string name="change">change</string>
</resources>