<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/sky"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Friedns_name"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/username_label"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_person" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#aed3d9"
                android:ems="10"
                android:hint="@string/enter_name_register"
                android:inputType="text"
                android:textColorHint="#455A64"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/password_label"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#aed3d9"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorHint="#455A64"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/confirm_password_register_label"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/editTextTextPassword4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#aed3d9"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="#455A64"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/display_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/display_name"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_person" />

            <EditText
                android:id="@+id/display_name_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#aed3d9"
                android:ems="10"
                android:hint="@string/enter_display_name"
                android:inputType="text"
                android:textColorHint="#455A64"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
