<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#adadad"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_image_profile_image"
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:layout_marginEnd="20dp"
            tools:src="@drawable/ic_person"
            android:contentDescription="@string/cur_user"/>

        <TextView
            android:id="@+id/user_text_user_name"
            android:layout_width="207dp"
            android:layout_height="87dp"
            android:layout_marginEnd="120dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/settings"
        tools:ignore="RelativeOverlap" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/layout_profile"
        android:layout_above="@+id/divider"
>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/friend" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_contact"
            android:src="@drawable/add"
            android:layout_gravity="bottom|end"
            android:layout_margin="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/black"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
